--- a/src/_includes/partials/components/article-list.njk
+++ b/src/_includes/partials/components/article-list.njk
@@ -1,5 +1,5 @@
 {% if postListItems.length %}
-<section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-bottom-max ]">
+<section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-top-max md:pad-bottom-max ]">
 	<div class="[ wrapper ] [ sf-flow ]">
 		{% if postListHeading %}
 			<h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ postListHeading }}</h2>
