--- a/src/_includes/partials/components/journal-list.njk
+++ b/src/_includes/partials/components/journal-list.njk
@@ -1,5 +1,5 @@
 {% if journalListItems.length %}
-<section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-top-600 md:pad-bottom-max ]">
+<section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-top-max md:pad-bottom-max ]">
 	<div class="[ wrapper ] [ sf-flow ]">
 		{% if journalListHeading %}
 			<h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ journalListHeading }}</h2>
