--- a/src/_includes/partials/components/project-list.njk
+++ b/src/_includes/partials/components/project-list.njk
@@ -1,5 +1,5 @@
 {% if projectListItems.length %}
-  <section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-top-600 md:pad-bottom-max ]">
+  <section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-top-max md:pad-bottom-max ]">
     <div class="[ wrapper ] [ sf-flow ]">
       {% if page.url == '/' %}
         <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Featured Projects</h2>
