--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -18,6 +18,7 @@
 	&__summary {
 		--flow-space: #{get-size(500)};
 		font-weight: 550;
+		line-height: 1.4;
 
 		a {
 			color: currentcolor;
@@ -31,7 +32,7 @@
 
 	// . intro__meta
 	&__meta {
-		color: var(--color-text);
+		color: var(--color-white);
 		font-weight: 550;
 	}
 
@@ -58,9 +59,16 @@
 
 		a {
 			align-items: center;
+			color: var(--color-white);
 			display: flex;
 			font-size: get-size(400);
 			font-weight: 525;
+			text-decoration: underline;
+
+			&:hover,
+			&:focus {
+				color: var(--color-accent-alt);
+			}
 
 			svg {
 				margin-right: .4rem;
