--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -14,6 +14,19 @@
 
 			.nav__item {
 				flex-shrink: 0;
+
+				a {
+					color: currentcolor;
+
+					&:hover,
+					&:focus {
+						color: var(--color-accent);
+					}
+
+					&:focus-visible {
+						outline-color: var(--color-accent);
+					}
+				}
 			}
 		}
 	}
