style: intro link underlines

--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -22,11 +22,11 @@
 
 		a {
 			color: currentcolor;
+			text-decoration: underline;
 
 			&:hover,
 			&:focus {
 				color: var(--color-accent-alt);
-				text-decoration: none;
 			}
 		}
 	}
