chore: updated theme colour to new purple

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml" />
 
-	<meta name="theme-color" content="#ffd53d">
+	<meta name="theme-color" content="#6a5193">
 	<link rel="icon" href="/images/favicons/favicon.svg">
 	<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#4b87bd">
 	<link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png">
