fix: font css was missed!

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -3,7 +3,7 @@
 	font-family: red-hat;
 	font-style: normal;
 	font-weight: 300 700;
-	src: url('/fonts/red-hat/red-hat-test.woff2') format('woff2');
+	src: url('/fonts/red-hat/red-hat.woff2') format('woff2');
 }
 
 @font-face {
