chore: list role not needed inside nav element

--- a/src/_includes/partials/components/nav.njk
+++ b/src/_includes/partials/components/nav.njk
@@ -1,7 +1,7 @@
 {% if navigation.items %}
 
 		<nav class="nav" aria-label="Main">
-			<ul class="[ nav__list nav__list--main ] [ box-flex align-center md:space-before ]" role="list">
+			<ul class="[ nav__list nav__list--main ] [ box-flex align-center md:space-before ]">
 			{% for item in navigation.items %}
 				{% set externalAttribute = '' %}
 				{% set currentAttribute = '' %}
